// Copyright 2020 IBM Corp.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package connectors;
option java_package = "com.datmesh";
option go_package = "github.com/ibm/the-mesh-for-data/pkg/connectors/protobuf";

message Credentials {
    string access_key = 1;
    string secret_key = 2;
    string username = 3;
    string password = 4;
    string api_key = 5;
}

message DatasetCredentials {
    string dataset_id = 1;           // identifier of asset - always needed. JSON expected. Interpreted by the Connector, can contain any additional information as part of JSON
    Credentials creds = 2;
}
